prizrakcluster/apps/sillytavern/sillytavern-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: sillytavern
  name: sillytavern
  namespace: sillytavern
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sillytavern
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: sillytavern
    spec:
      containers:
        - image: ghcr.io/sillytavern/sillytavern:staging
          name: sillytavern
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /home/node/app/config
              name: st-config
            - mountPath: /home/node/app/data
              name: st-data
            - mountPath: /home/node/app/plugins
              name: st-plugins
      restartPolicy: Always
      volumes:
        - name: st-data
          persistentVolumeClaim:
            claimName: st-data
        - name: st-plugins
          persistentVolumeClaim:
            claimName: st-plugins
        - name: st-config
          configMap:
            name: sillytavern-config
            items:
              - key: config.yaml
                path: config.yaml
